# sillystack

./: sillystack.cabal
scripts/: deploy-haddock-manually.sh
src/Language/SillyStack/: Instructions.hs
