name:                sillystack
version:             0.1.0.0
synopsis:            A silly stack-based VM for the hell of it
-- description:
homepage:            https://github.com/relrod/sillystack
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Language.SillyStack.Instructions
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , lens >= 4 && < 5
                     , mtl >= 2 && < 3
  hs-source-dirs:      src
  default-language:    Haskell2010